--- a/GenMMRec/src/configs/model/RFGUME.yaml
+++ b/GenMMRec/src/configs/model/RFGUME.yaml
@@ -30,7 +30,12 @@ rf_dropout: 0.1             # Dropout率
 # rf_learning_rate:  [0.001, 0.002, 0.0001, 0.00001]
 rf_learning_rate: 0.0001
      # RF模块独立学习率
-rf_sampling_steps: 5        # ODE采样步数
+rf_sampling_steps: 10        # ODE采样步数
+
+# User Interest Guidance (Prior Knowledge)
+use_user_guidance: True      # 启用用户先验知识指导
+user_guidance_scale: 0.2     # alpha: 用户先验的缩放因子
+guidance_decay_power: 2.0    # lambda_1(t) = (1-t)^power 的指数（时间衰减）
 
 # RF Warmup - 渐进式启用RF
 rf_warmup_epochs: 5         # 前N个epoch不启用RF，让GUME预热
