--- a/GenMMRec/src/configs/model/RFBM3.yaml
+++ b/GenMMRec/src/configs/model/RFBM3.yaml
@@ -1,14 +1,14 @@
 embedding_size: 64
 feat_embed_dim: 64
 
-n_layers: [1, 2]
-dropout: [0.3, 0.5]
-reg_weight: [0.1, 0.01]
+n_layers: 1 # [1, 2]
+dropout: 0.3 # [0.3, 0.5]
+reg_weight: 0.1 # [0.1, 0.01]
 cl_weight: 2.0
 
 use_neg_sampling: False
 
-hyper_parameters: ["n_layers", "reg_weight", "dropout", "rf_loss_weight", "rf_learning_rate"]
+hyper_parameters: ["rf_loss_weight", "rf_learning_rate"]
 
 # RF enhancement parameters (consistent with RFGUME)
 use_rf: True
