--- a/GenMMRec/src/configs/model/RFBM3.yaml
+++ b/GenMMRec/src/configs/model/RFBM3.yaml
@@ -8,7 +8,7 @@ cl_weight: 2.0
 
 use_neg_sampling: False
 
-hyper_parameters: ["rf_loss_weight", "rf_learning_rate"]
+# hyper_parameters: ["rf_loss_weight", "rf_learning_rate"]
 
 # RF enhancement parameters (consistent with RFGUME)
 use_rf: True
@@ -16,8 +16,10 @@ rf_hidden_dim: 128
 rf_n_layers: 2
 rf_dropout: 0.1
 rf_sampling_steps: 10
-rf_learning_rate: [0.00005, 0.0001, 0.0003, 0.0005, 0.001]
-rf_loss_weight: [0.01, 0.001, 0.0001]
+# rf_learning_rate: [0.00005, 0.0001, 0.0003, 0.0005, 0.001]
+# rf_loss_weight: [0.01, 0.001, 0.0001]
+rf_learning_rate: 0.0001
+rf_loss_weight: 0.01
 rf_warmup_epochs: 5
 rf_mix_ratio: 0.1
 rf_inference_mix_ratio: 0.2
