--- a/GenMMRec/src/configs/model/RFLGMRec.yaml
+++ b/GenMMRec/src/configs/model/RFLGMRec.yaml
@@ -27,17 +27,20 @@ alpha: 0.3
 cl_weight : 1e-04
 reg_weight: 1e-06
 
-hyper_parameters: ["rf_loss_weight", "rf_learning_rate"]
+# hyper_parameters: ["rf_loss_weight", "rf_learning_rate"]
 
 # RF enhancement parameters (consistent with RFGUME)
 use_rf: True
 rf_hidden_dim: 128
 rf_n_layers: 2
 rf_dropout: 0.1
-rf_sampling_steps: 10
-rf_learning_rate: [0.00005, 0.0001, 0.0003, 0.0005, 0.001]
-rf_loss_weight: [0.01, 0.001, 0.0001]
+rf_sampling_steps: 1000
+# rf_learning_rate: [0.00005, 0.0001, 0.0003, 0.0005, 0.001]
+# rf_loss_weight: [0.01, 0.001, 0.0001]
+rf_learning_rate: 0.0001
+rf_loss_weight: 0.01
 rf_warmup_epochs: 5
 rf_mix_ratio: 0.1
 rf_inference_mix_ratio: 0.2
 rf_contrast_temp: 0.2
+# cl_loss_in_main: False
