update denoise module

--- a/GenMMRec/src/configs/model/RFFREEDOM.yaml
+++ b/GenMMRec/src/configs/model/RFFREEDOM.yaml
@@ -26,3 +26,9 @@ rf_warmup_epochs: 5
 rf_mix_ratio: 0.1
 rf_inference_mix_ratio: 0.2
 rf_contrast_temp: 0.2
+
+# Causal denoising parameters (IPW-based)
+use_denoise: False
+clean_rating_threshold: 5.0
+denoise_layers: 2
+ps_loss_weight: 0.1
