Add MVDiff model

--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,14 @@ __marimo__/
 *.pdf
 wandb/
 log/*
+
+# Model checkpoints (should not be committed)
+*.pth
+*.pt
+*.ckpt
+*.bin
+GenMMRec/src/saved/
+**/saved/
+
+# Trae (documentation/notes tool)
+.trae/
